feat: add initial layout and styles, include new images

--- a/index.html
+++ b/index.html
@@ -5,9 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Kodchasan:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Acme App</title>
   </head>
   <body>
-    <!-- Start Coding Here -->
+    <nav></nav>
+    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore culpa, exercitationem ex dignissimos aperiam sint ullam sapiente molestias itaque deserunt quod repudiandae voluptas a architecto, nulla consequuntur nam quas rem.</h2>
+  <img src="/css-app-landing-page/image/Vector.png" alt="rocket">
+
+  <footer></footer>
   </body>
 </html>
