--- a/index.html
+++ b/index.html
@@ -14,10 +14,6 @@
     <title>Acme App</title>
   </head>
   <body>
-    <nav></nav>
-    <h2>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore culpa, exercitationem ex dignissimos aperiam sint ullam sapiente molestias itaque deserunt quod repudiandae voluptas a architecto, nulla consequuntur nam quas rem.</h2>
-  <img src="/css-app-landing-page/image/Vector.png" alt="rocket">
-
-  <footer></footer>
+    <!-- /* Start coding here */ -->
   </body>
 </html>
