feat: add placeholder text to index.html for content demonstration

--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
   </head>
   <body>
     <!-- /* Start coding here */ -->
-
-
-    
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem
+      perspiciatis voluptates repellendus quos illum illo. Aspernatur, ad
+      nesciunt! Beatae illum perspiciatis magni atque adipisci ea cum autem
+      vitae reprehenderit praesentium!
+    </p>
   </body>
 </html>
