--- a/index.html
+++ b/index.html
@@ -14,6 +14,32 @@
     <title>Acme App</title>
   </head>
   <body>
-    <!-- /* Start coding here */ -->
+    <div class="container">
+      <h2>Get in Touch</h2>
+
+      <label>Name</label>
+      <input type="text" placeholder="John Doe" />
+
+      <label>Email</label>
+      <input type="email" placeholder="john@example.com" />
+
+      <label>Message</label>
+      <input placeholder="Your message..." />
+
+      <button>Submit</button>
+
+      
+    </div>
+
+    <footer>
+      <h3 class="text1">Acme productivity app ©2024</h3>
+      <nav class="footer-links">
+        <a href="#">FAQ</a>
+        <a href="#">Terms</a>
+        <a href="#">AI Policy</a>
+        <a href="#">Pricing</a>
+      </nav>
+    </footer>
+
   </body>
 </html>
